upd: menu, requests

--- a/src/main/resources/templates/admin/menu.html
+++ b/src/main/resources/templates/admin/menu.html
@@ -20,6 +20,9 @@
 
     <aside class="sidebar">
         <nav class="menu sidebar-nav">
+            <div class="logo-container">
+                <a href="/main"><img class="header-logo" th:src="@{/images/logo.svg}" alt="Royal House Logo"/></a>
+            </div>
             <ul>
                 <li class="menu-item"><a th:href="@{/admin/main/requests}">Requests</a></li>
                 <li class="menu-item"><a th:href="@{/admin/main/objects}">Objects</a></li>
