--- a/src/main/resources/templates/admin/main/request/requests.html
+++ b/src/main/resources/templates/admin/main/request/requests.html
@@ -99,5 +99,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="/js/menu-toggle.js"></script>
+<script src="/js/submenu-toggle.js"></script>
 </body>
 </html>
