--- a/src/main/resources/templates/admin/menu.html
+++ b/src/main/resources/templates/admin/menu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Admin Panel</title>
     <th:block th:insert="~{fragments/favicon :: favicon}"></th:block>
+    <link rel="stylesheet" th:href="@{/css/normalize.css}"/>
     <link rel="stylesheet" th:href="@{/css/menu.css}"/>
 </head>
 
