--- a/src/main/resources/templates/admin/main/request/requests.html
+++ b/src/main/resources/templates/admin/main/request/requests.html
@@ -91,8 +91,14 @@
                               style="display:inline;">
                             <button class="btn-action" type="submit">View</button>
                         </form>
-                        <form th:action="@{/admin/main/requests/delete/{id}(id=${request.id})}" method="post"
-                              style="display:inline;">
+                        <form th:action="@{/admin/main/requests/delete/{id}(id=${request.id})}" method="post" style="display:inline;">
+                            <input type="hidden" name="page" th:value="${currentPage}"/>
+                            <input type="hidden" name="size" th:value="${size}"/>
+                            <input type="hidden" name="name" th:value="${name}"/>
+                            <input type="hidden" name="phone" th:value="${phone}"/>
+                            <input type="hidden" name="email" th:value="${email}"/>
+                            <input type="hidden" name="date" th:value="${date}"/>
+                            <input type="hidden" name="status" th:value="${status}"/>
                             <button class="btn-delete" type="submit">Delete</button>
                         </form>
                     </div>
