--- a/src/main/resources/templates/admin/main/real-estate/real-estate-details.html
+++ b/src/main/resources/templates/admin/main/real-estate/real-estate-details.html
@@ -45,23 +45,23 @@
             </tr>
             <tr class="details-row">
                 <th class="header-green">Rooms</th>
-                <td th:text="${realEstate.numRooms}"></td>
+                <td th:text="${realEstate.details.numRooms}"></td>
             </tr>
             <tr class="details-row">
                 <th class="header-blue">Floor</th>
-                <td th:text="${realEstate.numFloors}"></td>
+                <td th:text="${realEstate.details.numFloors}"></td>
             </tr>
             <tr class="details-row">
                 <th class="header-green">Number of floors</th>
-                <td th:text="${realEstate.numStoreys}"></td>
+                <td th:text="${realEstate.details.numStoreys}"></td>
             </tr>
             <tr class="details-row">
                 <th class="header-blue">Year Built</th>
-                <td th:text="${realEstate.yearBuilt}"></td>
+                <td th:text="${realEstate.details.yearBuilt}"></td>
             </tr>
             <tr class="details-row">
                 <th class="header-green">Terraces/Balconies</th>
-                <td th:text="${realEstate.numTerracesBalconies}"></td>
+                <td th:text="${realEstate.details.numTerracesBalconies}"></td>
             </tr>
             <tr class="details-row">
                 <th class="header-blue">Date Added</th>
